--- a/config/api.yaml
+++ b/config/api.yaml
@@ -1,3 +1,12 @@
 places:
-  type:     rest
+  type: rest
   resource: App\Controller\PlaceController
+
+users:
+  type: rest
+  resource: App\Controller\UserController
+
+login:
+  methods: [POST]
+  path: /login
+  controller: App\Controller\AuthenticationController:postLoginAction
