--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -31,5 +31,6 @@ security:
     # Easy way to control access for large sections of your site
     # Note: Only the *first* access control that matches will be used
     access_control:
-        - { path: ^/, roles: ROLE_USER }
+        - { path: ^/places, roles: ROLE_USER }
+        - { path: ^/users, roles: ROLE_USER }
         # - { path: ^/profile, roles: ROLE_USER }
