--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -14,6 +14,10 @@ security:
         dev:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
             security: false
+        public:
+            pattern: ^/users
+            methods: [POST]
+            security: false
         main:
             anonymous: true
             guard:
