--- a/composer.json
+++ b/composer.json
@@ -6,8 +6,14 @@
         "ext-ctype": "*",
         "ext-iconv": "*",
         "friendsofsymfony/rest-bundle": "2.4.x-dev",
+        "geocoder-php/google-maps-provider": "^4.2",
+        "geocoder-php/nominatim-provider": "^5.0",
+        "guzzlehttp/psr7": "^1.4",
         "jms/serializer-bundle": "^3.0",
         "nelmio/cors-bundle": "^1.5",
+        "php-http/curl-client": "^1.7",
+        "php-http/guzzle6-adapter": "1.0",
+        "php-http/message": "^1.7",
         "sensio/framework-extra-bundle": "^5.1",
         "symfony/asset": "4.1.*",
         "symfony/console": "4.1.*",
