--- a/composer.json
+++ b/composer.json
@@ -15,8 +15,10 @@
         "php-http/guzzle6-adapter": "1.0",
         "php-http/message": "^1.7",
         "sensio/framework-extra-bundle": "^5.1",
+        "symfony/apache-pack": "^1.0",
         "symfony/asset": "4.1.*",
         "symfony/console": "4.1.*",
+        "symfony/dependency-injection": "4.1.*",
         "symfony/expression-language": "4.1.*",
         "symfony/flex": "^1.1",
         "symfony/form": "4.1.*",
