--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
         "geocoder-php/nominatim-provider": "^5.0",
         "guzzlehttp/psr7": "^1.4",
         "jms/serializer-bundle": "^3.0",
+        "nelmio/api-doc-bundle": "^3.3",
         "nelmio/cors-bundle": "^1.5",
         "php-http/curl-client": "^1.7",
         "php-http/guzzle6-adapter": "1.0",
