--- a/composer.json
+++ b/composer.json
@@ -5,6 +5,7 @@
         "php": "^7.1.3",
         "ext-ctype": "*",
         "ext-iconv": "*",
+        "cweagans/composer-patches": "^1.6",
         "friendsofsymfony/rest-bundle": "2.4.x-dev",
         "geocoder-php/google-maps-provider": "^4.2",
         "geocoder-php/nominatim-provider": "^5.0",
@@ -87,6 +88,11 @@
         "symfony": {
             "allow-contrib": false,
             "require": "4.2.*"
+        },
+        "patches": {
+            "nelmio/api-doc-bundle": {
+                "Fix JMS 3.0": "patches/nelmio-api.patch"
+            }
         }
     }
 }
