--- a/.env
+++ b/.env
@@ -15,7 +15,7 @@ APP_SECRET=c5b6cb22c7e1812f986167cbfc885cdf
 # Format described at http://docs.doctrine-project.org/projects/doctrine-dbal/en/latest/reference/configuration.html#connecting-using-a-url
 # For an SQLite database, use: "sqlite:///%kernel.project_dir%/var/data.db"
 # Configure your db driver and server_version in config/packages/doctrine.yaml
-DATABASE_URL=mysql://root@127.0.0.1:3306/tindart
+DATABASE_URL=mysql://root@127.0.0.1:3306/tindart_2
 ###< doctrine/doctrine-bundle ###
 
 ###> symfony/swiftmailer-bundle ###
